--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
     color: white;
 }
 .images{
-    height: 530px;
+    height: 590px;
     width: 510px;
 }
 
@@ -118,4 +118,23 @@ body{
 }
 .product-cards{
     border-bottom: 4px solid #6c63ff ;
+}
+/* Features */
+.feature-icon{
+    background-color: #6c63ff;
+    color: white;
+    padding: 13px;
+    border-radius: 50%;
+    width: 53px;
+    display: block;
+    height: 53px;
+    text-align: center;
+
+        transition: all 0.7s ease;
+
+}
+
+.feature-card:hover span{
+    transform: translateX(25px);
+    background-color: #4741af;
 }
